[project]
name = "signal-processing-ctg"
version = "0.1.0"
description = "initial environment for processing CTG monitor files."
authors = [
    {name = "DevL",email = "dvora.leibowitz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.12.1,<3.0.0) ; python_version >= \"3.12\" and python_version < \"3.15\"",
    "numpy (>=2.5.0,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "scipy (>=1.18.0,<2.0.0)",
    "plotly (>=6.8.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.3.0"
jupyter = "^1.1.1"

